--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -145,8 +145,8 @@
     <string name="app_profile_block_focus_send_title">Блокировать аудио фокус</string>
     <string name="app_profile_block_focus_send_summary">Блокировать запросы отключения звука от этого приложения</string>
 
-    <string name="app_profile_force_sonification_title">Как Уведомления</string>
-    <string name="app_profile_force_sonification_summary">Считать звуки проигрываемые данным приложением уведомлениями. Используются настройки канала уведомлений для громкости, дублирования вывода и т.д.</string>
+    <string name="app_profile_force_sonification_title">Звук на Динамик</string>
+    <string name="app_profile_force_sonification_summary">Всегда выводить звук приложения на динамик телефона</string>
 
     <string name="app_profile_spoof_title">Подстановка Модели Устройства</string>
 
