--- a/res/values/app_profile_arrays.xml
+++ b/res/values/app_profile_arrays.xml
@@ -20,27 +20,33 @@
 
     <string-array name="performance_listentries">
     	<item>@string/performance_default</item>
-    	<item>@string/performance_balance</item>
-    	<item>@string/performance_limited</item>
-    	<item>@string/performance_performance</item>
-    	<item>@string/performance_gaming</item>
-    	<item>@string/performance_gaming2</item>
-    	<item>@string/performance_battery</item>
+    	<item>@string/performance_low_power</item>
+    	<item>@string/performance_sustained_performance</item>
+    	<item>@string/performance_fixed_performance</item>
+    	<item>@string/performance_vr</item>
+    	<item>@string/performance_expensive_rendering</item>
+    	<item>@string/performance_interactive</item>
+    	<item>@string/performance_device_idle</item>
+    	<item>@string/performance_display_inactive</item>
+    	<item>@string/performance_game</item>
      </string-array>
 
      <string-array name="performance_listvalues">
     	<item>default</item>
-    	<item>balance</item>
-    	<item>limited</item>
-    	<item>performance</item>
-    	<item>gaming</item>
-    	<item>gaming2</item>
-    	<item>battery</item>
+    	<item>1</item>
+    	<item>2</item>
+    	<item>3</item>
+    	<item>4</item>
+    	<item>6</item>
+    	<item>7</item>
+    	<item>8</item>
+    	<item>9</item>
+    	<item>16</item>
     </string-array>
 
     <string-array name="thermal_listentries">
     	<item>@string/thermal_default</item>
-    	<item>@string/thermal_balance</item>
+    	<!--item>@string/thermal_balance</item>
     	<item>@string/thermal_gaming</item>
     	<item>@string/thermal_gaming2</item>
     	<item>@string/thermal_nolimits</item>
@@ -48,11 +54,11 @@
     	<item>@string/thermal_cool</item>
     	<item>@string/thermal_camera</item>
     	<item>@string/thermal_incall</item>
-    	<item>@string/thermal_vr</item>
+    	<item>@string/thermal_vr</item-->
      </string-array>
      <string-array name="thermal_listvalues">
     	<item>default</item>
-    	<item>balance</item>
+    	<!--item>balance</item>
     	<item>gaming</item>
     	<item>gaming2</item>
     	<item>nolimits</item>
@@ -60,7 +66,7 @@
     	<item>cool</item>
     	<item>camera</item>
     	<item>incall</item>
-    	<item>vr</item>
+    	<item>vr</item-->
     </string-array>
     <string-array name="brightness_listentries">
     	<item>@string/brightness_default</item>
@@ -99,38 +105,30 @@
     	<item>9</item>
     </string-array>
 
-    <string-array name="fps_listentries">
+    <string-array name="max_fps_listentries">
     	<item>Default</item>
-    	<item>30</item>
-    	<item>60</item>
+    	<!--item>60</item>
     	<item>90</item>
-    	<item>120</item>
-    	<item>Dynamic</item>
+    	<item>120</item-->
      </string-array>
-     <string-array name="fps_listvalues">
+     <string-array name="max_fps_listvalues">
     	<item>0</item>
-    	<item>1</item>
-    	<item>3</item>
-    	<item>4</item>
-    	<item>5</item>
-    	<item>10</item>
+    	<!--item>60</item>
+    	<item>90</item>
+    	<item>120</item-->
     </string-array>
 
     <string-array name="min_fps_listentries">
     	<item>Default</item>
-    	<item>30</item>
-    	<item>60</item>
+    	<!--item>60</item>
     	<item>90</item>
-    	<item>120</item>
-    	<item>Dynamic</item>
+    	<item>120</item-->
      </string-array>
      <string-array name="min_fps_listvalues">
     	<item>0</item>
-    	<item>1</item>
-    	<item>3</item>
-    	<item>4</item>
-    	<item>5</item>
-    	<item>10</item>
+    	<!--item>60</item>
+    	<item>90</item>
+    	<item>120</item-->
     </string-array>
 
     <string-array name="cpu_silver_freqs">
@@ -283,20 +281,20 @@
 
     <string-array name="file_access_listentries">
     	<item>@string/file_access_default</item>
-    	<item>@string/file_access_none</item>
+    	<item>@string/file_access_full</item>
+    	<!--item>@string/file_access_none</item>
     	<item>@string/file_access_read</item>
     	<item>@string/file_access_write</item>
-    	<item>@string/file_access_full</item>
-    	<item>@string/file_access_legacy</item>
+    	<item>@string/file_access_legacy</item-->
     </string-array>
 
     <string-array name="file_access_listvalues">
     	<item>0</item>
-    	<item>1</item>
+    	<item>5</item>
+    	<!--item>1</item>
     	<item>2</item>
     	<item>3</item>
-    	<item>4</item>
-    	<item>5</item>
+    	<item>4</item-->
     </string-array>
 
     <string-array name="language_listentries">
