--- a/res/xml/baikal_dashboard.xml
+++ b/res/xml/baikal_dashboard.xml
@@ -57,51 +57,81 @@
 
         <PreferenceScreen
             android:title="@string/statusbar_title"
+            android:summary="@string/statusbar_summary"
+            android:icon="@drawable/ic_settings_statusbar"
             android:fragment="com.crdroid.settings.fragments.StatusBar" />
 
 
         <PreferenceScreen
             android:title="@string/quicksettings_title"
+            android:summary="@string/quicksettings_summary"
+            android:icon="@drawable/ic_settings_quicksettings"
             android:fragment="com.crdroid.settings.fragments.QuickSettings" />
 
         <PreferenceScreen
             android:title="@string/lockscreen_title"
+            android:summary="@string/lockscreen_summary"
+            android:icon="@drawable/ic_settings_lockscreen"
             android:fragment="com.crdroid.settings.fragments.LockScreen" />
 
         <PreferenceScreen
             android:title="@string/navigation_title"
+            android:summary="@string/navigation_summary"
+            android:icon="@drawable/ic_settings_navigation"
             android:fragment="com.crdroid.settings.fragments.Navigation" />
 
         <PreferenceScreen
             android:title="@string/button_title"
+            android:summary="@string/button_summary"
+            android:icon="@drawable/ic_settings_button"
             android:fragment="com.crdroid.settings.fragments.Buttons" />
 
         <PreferenceScreen
             android:title="@string/ui_title"
+            android:summary="@string/ui_summary"
+            android:icon="@drawable/ic_settings_ui"
             android:fragment="com.crdroid.settings.fragments.UserInterface" />
 
         <PreferenceScreen
             android:title="@string/notifications_title"
+            android:summary="@string/notifications_summary"
+            android:icon="@drawable/ic_settings_notification"
             android:fragment="com.crdroid.settings.fragments.Notifications" />
 
         <PreferenceScreen
             android:title="@string/sound_title"
+            android:summary="@string/sound_summary"
+            android:icon="@drawable/ic_settings_sound"
             android:fragment="com.crdroid.settings.fragments.Sound" />
 
         <PreferenceScreen
             android:title="@string/powersave_title"
+            android:summary="@string/powersave_summary"
+            android:icon="@drawable/ic_settings_powersave"
             android:fragment="com.crdroid.settings.fragments.PowerSave" />
 
         <PreferenceScreen
             android:title="@string/smart_trust_title"
+            android:summary="@string/smart_trust_summary"
+            android:icon="@drawable/ic_settings_smart_trust"
             android:fragment="com.crdroid.settings.fragments.SmartTrust" />
 
         <PreferenceScreen
             android:title="@string/misc_title"
+            android:summary="@string/misc_summary"
+            android:icon="@drawable/ic_settings_misc"
             android:fragment="com.crdroid.settings.fragments.Miscellaneous" />
 
         <PreferenceScreen
+            android:title="@string/services_title"
+            android:summary="@string/services_summary"
+            android:icon="@drawable/ic_settings_services"
+            android:fragment="com.crdroid.settings.fragments.Services" />
+
+        <PreferenceScreen
             android:title="@string/about_crdroid"
+            android:summary="@string/about_summary"
+            android:icon="@drawable/ic_settings_about"
             android:fragment="com.crdroid.settings.fragments.About" />
 
         <!--PreferenceScreen
