--- a/res/xml/crdroid_settings_misc.xml
+++ b/res/xml/crdroid_settings_misc.xml
@@ -34,35 +34,27 @@
     </Preference>
 
     <!-- Unlock FPS for specific games -->
-    <com.crdroid.settings.preferences.SystemPropertySwitchPreference
+    <!-- com.crdroid.settings.preferences.SystemPropertySwitchPreference
         android:key="persist.sys.pixelprops.games"
         android:icon="@drawable/ic_backup"
         android:title="@string/use_games_spoof_title"
-        android:summary="@string/use_games_spoof_summary" />
+        android:summary="@string/use_games_spoof_summary" / -->
 
     <!-- Unlimited google photos storage -->
-    <com.crdroid.settings.preferences.SystemPropertySwitchPreference
+    <!-- com.crdroid.settings.preferences.SystemPropertySwitchPreference
         android:key="persist.sys.pixelprops.gphotos"
         android:icon="@drawable/ic_backup"
         android:title="@string/use_photos_spoof_title"
         android:summary="@string/use_photos_spoof_summary"
-        android:defaultValue="true" />
+        android:defaultValue="true" / -->
 
     <!-- Netflix -->
-    <com.crdroid.settings.preferences.SystemPropertySwitchPreference
+    <!-- com.crdroid.settings.preferences.SystemPropertySwitchPreference
         android:key="persist.sys.pixelprops.netflix"
         android:icon="@drawable/ic_netflix"
         android:title="@string/netflix_spoof_title"
         android:summary="@string/netflix_spoof_summary"
-        android:defaultValue="false" />
-
-    <!-- Google services -->
-    <Preference
-        android:key="gms_enabled_settings"
-        android:icon="@drawable/ic_google"
-        android:title="@string/gms_enabled_title"
-        android:summary="@string/gms_enabled_summary"
-        android:fragment="com.crdroid.settings.fragments.misc.GmsSwitch"/>
+        android:defaultValue="false" / -->
 
     <!-- Parallel space -->
     <Preference
@@ -76,12 +68,12 @@
     </Preference>
 
     <!-- Smart Charging -->
-    <Preference
+    <!-- Preference
         android:key="smart_charging"
         android:icon="@drawable/ic_battery_charging_80"
         android:title="@string/smart_charging_title"
         android:summary="@string/smart_charging_summary"
-        android:fragment="com.crdroid.settings.fragments.misc.SmartCharging"/>
+        android:fragment="com.crdroid.settings.fragments.misc.SmartCharging"/ -->
 
     <!-- Three-fingers-swipe to screenshot -->
     <com.crdroid.settings.preferences.SystemSettingSwitchPreference
@@ -98,6 +90,12 @@
         android:title="@string/sensor_block_title"
         android:summary="@string/sensor_block_summary"
         android:fragment="com.crdroid.settings.fragments.misc.SensorBlock"/>
+
+    <com.crdroid.settings.preferences.GlobalSettingSwitchPreference
+        android:key="baikalos_proximity_disable"
+        android:title="@string/baikalos_proximity_disable_title"
+        android:summary="@string/baikalos_proximity_disable_summary"
+        android:defaultValue="false" />
 
     <!-- Pocket Judge -->
     <com.crdroid.settings.preferences.SystemSettingSwitchPreference
