--- a/res/xml/crdroid_settings_sound.xml
+++ b/res/xml/crdroid_settings_sound.xml
@@ -97,4 +97,17 @@
             android:defaultValue="false" />
     </PreferenceCategory>
 
+    <Preference
+            android:key="audio_tweaks_a2dp_last_codec"
+            android:summary="%s"
+            android:title="@string/audio_tweaks_a2dp_last_codec_title"
+            android:selectable="false" />
+
+    <Preference
+            android:key="audio_tweaks_a2dp_last_bitrate"
+            android:summary="%s"
+            android:title="@string/audio_tweaks_a2dp_last_bitrate_title"
+            android:selectable="false" />
+
+
 </PreferenceScreen>
