--- a/res/xml/crdroid_settings_statusbar.xml
+++ b/res/xml/crdroid_settings_statusbar.xml
@@ -22,17 +22,16 @@
     >
 
     <!-- Status bar icons customizations -->
-    <PreferenceCategory
+    <!-- PreferenceCategory
         android:title="@string/status_bar_notch_category_title">
 
-        <!-- Hide notch fill -->
         <com.crdroid.settings.preferences.SystemSettingSwitchPreference
             android:key="display_cutout_mode"
             android:title="@string/display_hide_notch_title"
             android:summary="@string/display_hide_notch_summary"
             android:defaultValue="0" />
 
-    </PreferenceCategory>
+    </PreferenceCategory -->
 
     <!-- Status bar icons customizations -->
     <PreferenceCategory
