--- a/res/values/powersave_strings.xml
+++ b/res/values/powersave_strings.xml
@@ -5,16 +5,16 @@
     <string name="powersave_summary">Power Saving Tweaks</string>
 
     <string name="baikalos_aggressive_idle_title">Aggressive Idle</string>
-    <string name="baikalos_aggressive_idle_summary">Aggressively restrict background processes. Kill inactive apps after moderate timeout.</string>
+    <string name="baikalos_aggressive_idle_summary">Aggressively restrict background processes.</string>
 
     <string name="baikalos_extreme_idle_title">Extreme Mode</string>
-    <string name="baikalos_extreme_idle_summary">Extremely restrict background processes. Kill inactive apps after short timeout.</string>
+    <string name="baikalos_extreme_idle_summary">Extremely restrict background processes.</string>
 
     <string name="baikalos_aggressive_device_idle_title">Fast Device Idle</string>
     <string name="baikalos_aggressive_device_idle_summary">Enter Device Idle mode 30 seconds after screen off. Ignore movement</string>
 
-    <string name="baikal_stamina_oi_enabled_title">Stamina on Screen Off</string>
-    <string name="baikal_stamina_oi_enabled_summary">Enter stamina mode while screen is off. An Emergency mode to reach the power plug.</string>
+    <string name="baikalos_stamina_oi_enabled_title">Stamina on Screen Off</string>
+    <string name="baikalos_stamina_oi_enabled_summary">Enter stamina mode while screen is off. An Emergency mode to reach the power plug.</string>
 
     <string name="baikalos_unrestricted_net_title">Unrestricted Network</string>
     <string name="baikalos_unrestricted_net_summary">Do not restrict network access in Idle state. Could fix notification problems. Increases battery drain!</string>
