--- a/res/xml/crdroid_settings_powersave.xml
+++ b/res/xml/crdroid_settings_powersave.xml
@@ -24,6 +24,22 @@
     android:title="@string/powersave_title"
     >
 
+        <ListPreference
+            android:key="default_profile_performance"
+            android:title="@string/app_profile_performance_title"
+            android:entries="@array/performance_listentries"
+            android:entryValues="@array/performance_listvalues" 
+            android:defaultValue="default"
+            android:summary="%s"/>
+
+        <ListPreference
+            android:key="default_profile_thermal"
+            android:title="@string/app_profile_thermal_title"
+            android:entries="@array/thermal_listentries"
+            android:entryValues="@array/thermal_listvalues"
+            android:defaultValue="default"
+            android:summary="%s" />
+
         <com.crdroid.settings.preferences.GlobalSettingSwitchPreference
             android:key="baikalos_aggressive_idle"
             android:defaultValue="false"
