--- a/res/xml/crdroid_settings_smart_trust.xml
+++ b/res/xml/crdroid_settings_smart_trust.xml
@@ -37,11 +37,13 @@
             android:summary="@string/trust_always_summary"
             android:dependency="baikalos_trust_enabled" />
 
-        <com.crdroid.settings.preferences.BluetoothDevicePreference 
+        <PreferenceCategory 
             android:key="trust_bluetooth_devices"
             android:title="@string/trust_bt_dev_title"
             android:summary="@string/trust_bt_dev_summary"
-            android:persistent="false"
-            android:dependency="baikalos_trust_enabled" />
+            android:dependency="baikalos_trust_enabled">
+
+        
+        </PreferenceCategory>
 
 </PreferenceScreen>
