--- a/res/values/cr_arrays.xml
+++ b/res/values/cr_arrays.xml
@@ -430,12 +430,13 @@
 
     <!-- Volume step options. -->
     <string-array name="volume_steps_entries" translatable="false">
-        <item>@string/volume_steps_60</item>
-        <item>@string/volume_steps_45</item>
-        <item>@string/volume_steps_30</item>
-        <item>@string/volume_steps_15</item>
-        <item>@string/volume_steps_7</item>
-        <item>@string/volume_steps_5</item>
+        <item>60</item>
+        <item>45</item>
+        <item>30</item>
+        <item>15</item>
+        <item>10</item>
+        <item>7</item>
+        <item>5</item>
     </string-array>
 
     <!-- Quick Settings brightness slider -->
