Squashed commit. Sorry
Change-Id: Ib9dfb0753246f18ad06f4f1249f0f6aa6d7da624

--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -70,7 +70,7 @@
     <string name="app_profile_reader_title">Режим чтения</string>
     <string name="app_profile_reader_summary">Разрешить ЦП переходить в режим глубокого сна во время работы этого приложения</string>
 
-    <string name="app_profile_fps_title">Максимальная частота обновления экрана</string>
+    <string name="app_profile_max_fps_title">Максимальная частота обновления экрана</string>
     <string name="app_profile_min_fps_title">Минимальная частота обновления экрана</string>
 
     <string name="edit_profile_title">Редактировать профиль</string>
