--- a/res/values/baikal_strings.xml
+++ b/res/values/baikal_strings.xml
@@ -1,6 +1,29 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
 
+    <string name="log_it_title">Save Logs</string>
+    <string name="log_it_summary">Logcat, kmesg, dmesg</string>
+
+    <string name="logcat_title">Logcat</string>
+    <string name="logcat_radio_title">Radio log</string>
+    <string name="kmesg_title">Kmesg</string>
+    <string name="dmesg_title">Dmesg</string>
+    <string name="log_it_now_title">Save</string>
+    <string name="log_it_dialog_title">Save</string>
+    <string name="logcat_warning">Share it</string>
+    <string name="share_title">Share...</string>
+    <string name="log_it_share_subject">BaikalOS logs</string>
+    <string name="log_it_now_summary">Be patient for the logs to be created</string>
+    <string name="log_it_logs_in_progress">Logs are being created…</string>
+    <string name="log_it_share_type_title">Share method</string>
+    <string name="log_it_share_type_zip">ZIP-File</string>
+    <string name="log_it_share_type_haste">Upload to BaikalOS Haste</string>
+    <string name="log_it_share_via">Share via</string>
+
+    <string name="baikalos_debug_title">Verbose log</string>
+    <string name="baikalos_debug_summary">Enable verbose logging. Do not enable without a reason</string>
+
+
     <!-- Device parts -->
     <string name="device_part_title">Device features</string>
     <string name="device_part_category">Device</string>
@@ -45,6 +68,15 @@
     <string name="aurora_enabled_title">Aurora Store</string>
     <string name="aurora_enabled_summary">Control Aurora Store</string>
 
+    <string name="dolby_enabled_title">Dolby</string>
+    <string name="dolby_enabled_summary">Dolby Audio Service</string>
+
+    <string name="jdsp_enabled_title">James DSP</string>
+    <string name="jdsp_enabled_summary">James DSP audio processor</string>
+
+    <string name="afx_enabled_title">AudioFX DSP</string>
+    <string name="afx_enabled_summary">AOSP AudioFX audio processor</string>
+
     <string name="services_title">Optional Services</string>
     <string name="services_summary">Google, Huawei, Fdroid, etc...</string>
 
@@ -58,4 +90,27 @@
 
     <string name="r_secure_title">Unrestricted Storage</string>
     <string name="r_secure_summary">Disable restrictions introduced by Android 11 on access to some External Storage folders</string>
+
+    <string name="background_blur_radius_title">Background blur</string>
+    <string name="blur_behind_radius_title">Blur behind</string>
+
+    <string name="background_blur_type_title">Blur type</string>
+
+    <string name="disable_autorevoke_title">Disable Auto Revoke</string>
+    <string name="disable_autorevoke_summary">Disable permissions auto revoke globally. Reboot required!</string>
+
+    <string name="baikalos_interaction_boost_title">Interaction Boost</string>
+    <string name="baikalos_interaction_boost_summary">Enable interaction boost</string>
+
+    <string name="baikalos_display_boost_title">Display Boost</string>
+    <string name="baikalos_display_boost_summary">Enable boost on display update</string>
+
+    <string name="baikalos_limited_charge_screen_on_title">Limit on screen on</string>
+    <string name="baikalos_limited_charge_screen_on_summary">Limit charging while screen is on</string>
+    <string name="baikalos_bpcharge_screen_on_title">Bypass on screen on</string>
+    <string name="baikalos_bpcharge_screen_on_summary">Turn on bypass charging while screen is on</string>
+
+    <string name="baikalos_aod_on_charger_title">AOD on Charger</string>
+    <string name="baikalos_aod_on_charger_summary">Enable Always On Display on charger</string>
+
 </resources>
