--- a/res/xml/app_profile.xml
+++ b/res/xml/app_profile.xml
@@ -119,21 +119,17 @@
             android:summary="@string/app_profile_full_screen_summary"
             android:defaultValue="false" / -->
 
-        <!-- ListPreference
+        <ListPreference
             android:key="app_profile_min_fps"
             android:title="@string/app_profile_min_fps_title"
-            android:entries="@array/min_fps_listentries"
-            android:entryValues="@array/min_fps_listvalues"
-            android:defaultValue="default"
+            android:defaultValue="0"
             android:summary="%s" />
 
         <ListPreference
             android:key="app_profile_max_fps"
             android:title="@string/app_profile_max_fps_title"
-            android:entries="@array/max_fps_listentries"
-            android:entryValues="@array/max_fps_listvalues"
-            android:defaultValue="default"
-            android:summary="%s" /-->
+            android:defaultValue="0"
+            android:summary="%s" />
 
         <!-- SwitchPreference
             android:key="app_profile_stamina"
