--- a/res/xml/crdroid_settings_about.xml
+++ b/res/xml/crdroid_settings_about.xml
@@ -23,7 +23,6 @@
     <!-- crDroid Changelog -->
     <Preference
         android:key="crdroid_changelog"
-        android:icon="@drawable/ic_changelog"
         android:title="@string/changelog_crdroid_title"
         android:summary="@string/changelog_crdroid_summary">
         <intent android:action="android.intent.action.MAIN"
@@ -62,16 +61,20 @@
     <!-- crDroid Source -->
     <Preference
         android:key="crdroid_source"
-        android:icon="@drawable/ic_source"
         android:title="@string/crdroid_source_title"
         android:summary="@string/crdroid_source_summary" />
 
     <!-- crDroid Telegram -->
-    <!-- Preference
+    <Preference
         android:key="crdroid_telegram"
-        android:icon="@drawable/ic_telegram"
         android:title="@string/crdroid_telegram_title"
-        android:summary="@string/crdroid_telegram_summary" / -->
+        android:summary="@string/crdroid_telegram_summary" />
+
+    <Preference
+        android:key="baikalos_logit"
+        android:title="@string/log_it_title"
+        android:summary="@string/log_it_summary"
+        android:fragment="com.crdroid.settings.fragments.LogIt" />
 
     <!-- crDroid Telegram Updates Channel -->
     <!-- Preference
