--- a/res/xml/crdroid_settings_ui.xml
+++ b/res/xml/crdroid_settings_ui.xml
@@ -138,4 +138,30 @@
         android:summary="@string/floating_rotation_button_summary"
         android:defaultValue="true" />
 
+    <!-- com.crdroid.settings.preferences.SystemSettingSeekBarPreference
+        android:key="background_blur_radius"
+        android:icon="@drawable/ic_blur"
+        android:title="@string/background_blur_radius_title"
+        android:defaultValue="-1"
+        android:max="255"
+        settings:units="@string/unit_pixels"
+        settings:min="-1" / -->
+
+    <!-- com.crdroid.settings.preferences.SystemSettingSeekBarPreference
+        android:key="blur_behind_radius"
+        android:icon="@drawable/ic_blur"
+        android:title="@string/blur_behind_radius_title"
+        android:defaultValue="23"
+        android:max="255"
+        settings:units="@string/unit_pixels"
+        settings:min="0" / -->
+
+    <!-- com.crdroid.settings.preferences.SystemSettingListPreference
+        android:key="background_blur_type"
+        android:icon="@drawable/ic_blur"
+        android:title="@string/background_blur_type_title"
+        android:entries="@array/background_blur_type_entries"
+        android:entryValues="@array/background_blur_type_values"
+        android:defaultValue="0" / -->
+
 </PreferenceScreen>
